Add server.js file with SQLite and Winston setup
This commit introduces a server.js file which includes new libraries for Express, SQLite, Winston for logging, and Request. It also establishes a SQLite database connection, creates a transaction table if it doesn't already exist, and sets up an endpoint for saving queue data to the database. Furthermore, the daily file and console transports for Winston logger are configured.

--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/khangpqvn/vcb-integration-script#readme",
   "dependencies": {
+    "express": "^4.19.2",
     "moment": "^2.29.4",
     "nodemailer": "^6.9.3",
     "qs": "^6.11.2",
     "request": "^2.88.2",
-    "uuid": "^9.0.0"
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.0",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
