Add new files to .gitignore
The commit adds several files, specifically queue.sqlite and various .idea files, to the .gitignore list. This ensures these files will not be tracked by Git, keeping the repository more

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,8 @@ dist
 /persisQueue.txt
 /position.txt
 /package-lock.json
+/queue.sqlite
+/.idea/.gitignore
+/.idea/modules.xml
+/.idea/vcb_integrate.iml
+/.idea/vcs.xml
