--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemailer": "^6.9.3",
     "qs": "^6.11.2",
     "request": "^2.88.2",
-    "sqlite3": "^5.1.7",
+    "sqlite3": "5.0.2",
     "uuid": "^9.0.0",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0"
